--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,32 @@
 version: "3.8"
 
-services: 
+services:
+  alta-store:
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    ports: 
+      - 8080:8080
+    depends_on: 
+      mysql_server:
+        condition: service_healthy
+
+  mysql_server:
+    image: mysql:latest
+    environment: 
+      MYSQL_ROOT_PASSWORD: 123ABCd4.
+    ports: 
+      - 3306:3306
+    restart: always
+    volumes: 
+      - ../data/mysql:/var/lib/mysql
+      - ../mysql:/etc/mysql/conf.d
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 20s
+      retries: 10
+
+networks: 
+  default:
+    external: 
+      name: alta-mysql-data
