--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports: 
       - 8080:8080
     depends_on: 
-      mysql_server:
+      mysql:
         condition: service_healthy
 
   mysql:
