--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: "3.8"
 
 services:
-  alta-store:
+  alta_store:
     build: 
       context: .
       dockerfile: Dockerfile
     ports: 
       - 8080:8080
     depends_on: 
-      mysql:
+      mysql_server:
         condition: service_healthy
 
-  mysql:
+  mysql_server:
     image: mysql:latest
     environment: 
       MYSQL_ROOT_PASSWORD: 123ABCd4.
