--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,11 @@ services:
     restart: on-failure
     volumes: 
       - api:/usr/src/app/
+    environment: 
+      MYSQL_HOST: localhost
+      MYSQL_USER: root
+      MYSQL_PASSWORD: 123ABCd4.
+      MYSQL_DB: alta-store
     depends_on: 
       - mysql
     networks: 
@@ -20,11 +25,8 @@ services:
     ports: 
       - 3306:3306
     environment: 
-      MYSQL_ROOT_HOST: localhost
-      MYSQL_USER: root
-      MYSQL_PASSWORD: 123ABCd4.
-      MYSQL_DATABASE: alta-store
       MYSQL_ROOT_PASSWORD: 123ABCd4.
+      MYSQL_DATABASE: alta-store
     volumes: 
       - database_mysql:/var/lib/mysql
     networks: 
