--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,8 @@ services:
       MYSQL_DATABASE: alta-store
     ports: 
       - 3308:3306
+    security_opt: 
+      - seccomp:unconfined
     restart: always
     volumes: 
       - alta-store-mysql-data:/var/lib/mysql
