--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,8 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
-    image: muslchn/alta-store
+    # image: muslchn/alta-store:latest
+    container_name: alta_store
     ports: 
       - 8080:8080
     # working_dir: /alta-store
@@ -25,17 +26,20 @@ services:
       - alta
 
   mysql:
-    image: mysql
+    image: mysql:8.0.26
+    container_name: mysql_server
     # cap_add: 
     #   - SYS_NICE  # CAP_SYS_NICE
     environment: 
+      # MYSQL_USER: alta
       MYSQL_ROOT_PASSWORD: 123ABC4d.
+      # MYSQL_PASSWORD: 123ABC4d.
       MYSQL_DATABASE: alta-store
     ports: 
       - 3308:3306
     # security_opt: 
     #   - seccomp:unconfined
-    restart: always
+    # restart: always
     volumes: 
       - alta-store-mysql-data:/var/lib/mysql
       # - alta-store-mysql:/etc/mysql/conf.d
